--- a/pom.xml
+++ b/pom.xml
@@ -67,30 +67,30 @@
             <scope>provided</scope>
         </dependency>
         <!-- WildFly Swarm Fractions -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>microprofile-config</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>jsonp</artifactId>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>jpa</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>cdi</artifactId>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>microprofile-jwt</artifactId>
-        </dependency>
-        <dependency>
+        </dependency>-->
+<!--        <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>bean-validation</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>jaxrs</artifactId>
@@ -99,18 +99,25 @@
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>jaxrs-jsonp</artifactId>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>datasources</artifactId>
-        </dependency>
-        <dependency>
+        </dependency>-->
+<!--        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.7</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- Arquillian -->
