--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>1.5.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Arquillian -->
         <dependency>
